# rust-basic-server

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
app/: Cargo.toml
app/src/: config.rs  error.rs  main.rs
app/src/api/: auth.rs  mod.rs  users.rs
app/src/middleware/: auth.rs  mod.rs  tracing.rs
app/src/tests/: mod.rs
application/: Cargo.toml
application/src/: lib.rs
application/src/dtos/: auth_dtos.rs  mod.rs  user_dtos.rs
application/src/errors/: mod.rs
application/src/services/: auth_service.rs  user_service.rs
application/src/use_cases/: auth_use_cases.rs  mod.rs  user_use_cases.rs
domain/: Cargo.toml
domain/src/entities/: mod.rs  role.rs  user.rs
domain/src/errors/: mod.rs
domain/src/repositories/: user_repository.rs
domain/src/value_objects/: credentials.rs  jwt_token.rs  mod.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs
infrastructure/src/config/: mod.rs
infrastructure/src/errors/: mod.rs
infrastructure/src/persistence/: mod.rs
infrastructure/src/persistence/memory/: user_repository.rs
infrastructure/src/persistence/postgres/: mod.rs  user_repository.rs
infrastructure/src/security/: jwt_service.rs  mod.rs  password_service.rs
infrastructure/src/tracing/: mod.rs
migrations/: 20250424000000_create_users_table.sql
scripts/: run_docker.sh  run_with_memory_repo.sh  run_with_postgres_repo.sh  stop_docker.sh
src/: config.rs  error.rs  main.rs
src/handlers/: auth.rs  mod.rs  protected.rs
src/middleware/: auth.rs
src/models/: mod.rs  user.rs
src/routes/: auth.rs  mod.rs  protected.rs
src/utils/: jwt.rs  mod.rs
