[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
domain = { path = "../domain" }

axum = "0.7.2"
axum-extra = { version = "0.9.0", features = ["typed-header"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace", "cors", "timeout"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.50"
dotenv = "0.15"
config = "0.13.3"
